--- a/css/main.css
+++ b/css/main.css
@@ -152,15 +152,6 @@ img{
     }   
 }
 
-/* @media screen and (min-width: 411px){
-    .main-weather__max{
-        margin-left: 7.5rem;
-    }
-    .main-weather__min{
-        margin-right: 7.5rem;
-    }   
-} */
-
 /* SEARCH */
 .search{
     width: 90%;
@@ -198,4 +189,17 @@ img{
     .search input::placeholder{
         font-size: 1.8rem;
     }
+}
+
+.error{
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: var(--color-grey);
+    font-size: 1.2rem;
+    padding: 1rem;
+    border-radius: 0.6rem;
+    color: crimson;
+    text-align: center;
 }
