--- a/css/main.css
+++ b/css/main.css
@@ -1,260 +1,267 @@
-:root{
-    --color-black: #161616;
-    --color-white: #ffffff;
-    --color-grey: #272727;
-    --font-primary: 'Baloo Tammudu 2', cursive;
+:root {
+	--color-black: #161616;
+	--color-white: #ffffff;
+	--color-grey: #272727;
+	--font-primary: 'Baloo Tammudu 2', cursive;
 }
 
-html{
-    box-sizing: border-box;
-    font-size: 62.5%;
+html {
+	box-sizing: border-box;
+	font-size: 62.5%;
 }
-*,*::before,*::after{
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0; 
-}
-
-body{
-    background-color: var(--color-black);
-    font-family: var(--font-primary);
-    font-size: 1.6rem;
-    color: var(--color-white);
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
 }
 
-svg{
-    width: 2rem;
+body {
+	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/70.jpg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	font-family: var(--font-primary);
+	font-size: 1.6rem;
+	color: var(--color-white);
 }
 
-img{
-    max-width: 100%;
-    /* display: none; */
+svg {
+	width: 2rem;
 }
 
-.main{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+img {
+	max-width: 100%;
+	/* display: none; */
 }
 
-@media screen and (min-width: 768px ){
-    .main{
-        max-width: 60rem;
-        margin: 0 auto;
-    }   
+.main {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+	.main {
+		max-width: 60rem;
+		margin: 0 auto;
+	}
 }
 
 /* LOCATION */
-.location{
-    margin-top: 1rem;
-    padding: .5rem 1rem;
+.location {
+	margin-top: 1rem;
+	padding: 0.5rem 1rem;
 }
 
-.location p{
-    display: flex;
-    align-items: center;
-    height: 4rem;
+.location p {
+	display: flex;
+	align-items: center;
+	height: 4rem;
 }
 
-.location p svg{
-    width: 2rem;
+.location p svg {
+	width: 2rem;
 }
 
-.location p span{
-    padding-left: .5rem;
-    margin-top: .7rem;
-    letter-spacing: .3rem;
-    font-size: 1.6rem;
+.location p span {
+	padding-left: 0.5rem;
+	margin-top: 0.7rem;
+	letter-spacing: 0.3rem;
+	font-size: 1.6rem;
 }
 
-@media screen and (min-width: 411px){
-    .location p span{
-        font-size: 1.8rem;
-    }
+@media screen and (min-width: 411px) {
+	.location p span {
+		font-size: 1.8rem;
+	}
 }
 
-@media screen and (min-width: 768px ){
-    .location{
-        margin-top: 2.5rem;
-    }
-    .location p svg{
-        width: 3rem;
-    }
-    .location p span{
-        font-size: 2.2rem;
-    }
+@media screen and (min-width: 768px) {
+	.location {
+		margin-top: 2.5rem;
+	}
+	.location p svg {
+		width: 3rem;
+	}
+	.location p span {
+		font-size: 2.2rem;
+	}
 }
 
 /* MAIN WEATHER */
-.main-weather{
-    margin-top: -8rem;
+.main-weather {
+	margin-top: -8rem;
 }
 
-.main-weather__current{
-    width: 90%;
-    margin: 0 auto;
-    text-align: center;
+.main-weather__current {
+	width: 90%;
+	margin: 0 auto;
+	text-align: center;
 }
 
-.main-weather__icon{
-    width: 45%;
-    margin: 0 auto;
+.main-weather__icon {
+	width: 45%;
+	margin: 0 auto;
 }
 
-@media screen and (min-width: 768px){
-    .main-weather__icon{
-        width: 50%;
-    }
+@media screen and (min-width: 768px) {
+	.main-weather__icon {
+		width: 50%;
+	}
 }
 
-.main-weather__info{
-    font-size: 6rem;
-    font-weight: 800;
-    margin-top: -3rem;
+.main-weather__info {
+	font-size: 6rem;
+	font-weight: 800;
+	margin-top: -3rem;
 }
 
-@media screen and (min-width: 411px){
-    .main-weather__info{
-        font-size: 8rem;
-    }   
+@media screen and (min-width: 411px) {
+	.main-weather__info {
+		font-size: 8rem;
+	}
 }
 
-@media screen and (min-width: 768px){
-    .main-weather__info{
-        font-size: 10rem;
-    }   
+@media screen and (min-width: 768px) {
+	.main-weather__info {
+		font-size: 10rem;
+	}
 }
 
 /* MAX - MIN */
-.main-weather__maxmin{
-    width: 90%;
-    margin: 0 auto;
-    margin-top: -3rem;
-    display: flex;
-    justify-content: space-between;
+.main-weather__maxmin {
+	width: 90%;
+	margin: 0 auto;
+	margin-top: -3rem;
+	display: flex;
+	justify-content: space-between;
 }
 
-@media screen and (min-width: 768px){
-    .main-weather__maxmin{
-        width: 70%;
-    }
+@media screen and (min-width: 768px) {
+	.main-weather__maxmin {
+		width: 70%;
+	}
 }
 
-.main-weather__max, .main-weather__min, .main-weather__wind, .main-weather__clouds {
-    background: var(--color-grey);
-    border-radius: .8rem;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 6rem;
-    height: 6rem;
+.main-weather__max,
+.main-weather__min,
+.main-weather__wind,
+.main-weather__clouds {
+	background: var(--color-grey);
+	border-radius: 0.8rem;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 6rem;
+	height: 6rem;
 }
 
-@media screen and (min-width: 411px){
-    .main-weather__max, 
-    .main-weather__min,
-    .main-weather__wind,
-    .main-weather__clouds {
-        width: 6.5rem;
-        height: 6.5rem;
-    }   
+@media screen and (min-width: 411px) {
+	.main-weather__max,
+	.main-weather__min,
+	.main-weather__wind,
+	.main-weather__clouds {
+		width: 6.5rem;
+		height: 6.5rem;
+	}
 }
 
-@media screen and (min-width: 768px){
-    .main-weather__max, 
-    .main-weather__min,
-    .main-weather__wind,
-    .main-weather__clouds {
-        width: 8rem;
-        height: 8rem;
-    }   
+@media screen and (min-width: 768px) {
+	.main-weather__max,
+	.main-weather__min,
+	.main-weather__wind,
+	.main-weather__clouds {
+		width: 8rem;
+		height: 8rem;
+	}
 }
 
-.main-weather__max span:nth-child(1), 
+.main-weather__max span:nth-child(1),
 .main-weather__min span:nth-child(1),
 .main-weather__wind span:nth-child(1),
-.main-weather__clouds span:nth-child(1){
-        margin-top: .5rem;
-} 
+.main-weather__clouds span:nth-child(1) {
+	margin-top: 0.5rem;
+}
 
-.main-weather__max span:nth-child(2), 
+.main-weather__max span:nth-child(2),
 .main-weather__min span:nth-child(2),
-.main-weather__clouds span:nth-child(2){
-    margin-top: -1.5rem;
+.main-weather__clouds span:nth-child(2) {
+	margin-top: -1.5rem;
 }
-.main-weather__wind span:nth-child(2){
-    margin-top: -1.2rem;
-}
-
-#wind{
-    font-size: 1.4rem;
-}
-#wind span{
-    font-size: 1.2rem;
+.main-weather__wind span:nth-child(2) {
+	margin-top: -1.2rem;
 }
 
-@media screen and (min-width: 411px){
-    .main-weather__max span:nth-child(2), 
-    .main-weather__min span:nth-child(2),
-    .main-weather__clouds span:nth-child(2){
-        margin-top: -1rem;
-    }   
-    .main-weather__wind span:nth-child(2){
-        margin-top: -.8rem;
-    }   
+#wind {
+	font-size: 1.4rem;
+}
+#wind span {
+	font-size: 1.2rem;
 }
 
+@media screen and (min-width: 411px) {
+	.main-weather__max span:nth-child(2),
+	.main-weather__min span:nth-child(2),
+	.main-weather__clouds span:nth-child(2) {
+		margin-top: -1rem;
+	}
+	.main-weather__wind span:nth-child(2) {
+		margin-top: -0.8rem;
+	}
+}
 
 /* SEARCH */
-.search{
-    width: 90%;
-    margin: 0 auto;
-    margin-bottom: 8rem;
+.search {
+	width: 90%;
+	margin: 0 auto;
+	margin-bottom: 8rem;
 }
 
-@media screen and (min-width: 375px){
-    .search{
-        margin-bottom: 6rem;
-    }   
+@media screen and (min-width: 375px) {
+	.search {
+		margin-bottom: 6rem;
+	}
 }
 
-.search input{
-    width: 100%;
-    padding: 1rem 0;
-    background: none;
-    border: none;
-    border-bottom: 1px solid var(--color-white);
-    outline: none;
-    color: var(--color-white);
-    font-size: 1.6rem;
-    padding-left: .5rem;
+.search input {
+	width: 100%;
+	padding: 1rem 0;
+	background: none;
+	border: none;
+	border-bottom: 1px solid var(--color-white);
+	outline: none;
+	color: var(--color-white);
+	font-size: 1.6rem;
+	padding-left: 0.5rem;
 }
 
-.search input::placeholder{
-    color: var(--color-white);
-    font-size: 1.6rem;
+.search input::placeholder {
+	color: var(--color-white);
+	font-size: 1.6rem;
 }
 
-@media screen and (min-width: 411px){
-    .search input{
-        font-size: 1.8rem;
-    }
-    .search input::placeholder{
-        font-size: 1.8rem;
-    }
+@media screen and (min-width: 411px) {
+	.search input {
+		font-size: 1.8rem;
+	}
+	.search input::placeholder {
+		font-size: 1.8rem;
+	}
 }
 
-.error{
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-    background: var(--color-grey);
-    font-size: 1.2rem;
-    padding: 1rem;
-    border-radius: 0.6rem;
-    color: #f8646c;
-    text-align: center;
+.error {
+	position: absolute;
+	top: 15%;
+	left: 50%;
+	transform: translateX(-50%);
+	background: var(--color-grey);
+	font-size: 1.2rem;
+	padding: 1rem;
+	border-radius: 0.6rem;
+	color: #f8646c;
+	text-align: center;
 }
